<resources>
    <string name="app_name">100157944_Lab6</string>
    <string name="delete">Delete</string>
    <string name="add">Add</string>
    <string name="new_contact_id">New Contact ID</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="save_contact">Add</string>
    <string name="delte">Delete</string>
</resources>
