<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_add_contact"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="ca.uoit.dmancini.a100157944_lab6.AddContact">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType=""
        android:ems="10"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/txtId"
        android:hint="@string/new_contact_id" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:layout_below="@+id/txtId"
        android:layout_alignEnd="@+id/txtId"
        android:id="@+id/txtFirstName"
        android:hint="@string/first_name" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:layout_below="@+id/txtFirstName"
        android:layout_alignStart="@+id/txtFirstName"
        android:id="@+id/txtLastName"
        android:hint="@string/last_name" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:ems="10"
        android:layout_below="@+id/txtLastName"
        android:layout_alignEnd="@+id/txtLastName"
        android:id="@+id/txtPhone"
        android:hint="@string/phone_number" />

    <Button
        android:text="@string/save_contact"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/button"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:onClick="addNewContact"/>
</RelativeLayout>
